Fixed issue with flipcard not appearing after a number of clicks on IE11

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -141,9 +141,16 @@
 
     // Show the back item
     .flipcard-item-back {
+      display: inline-block;
       opacity: 1;
       overflow-x: hidden;
       overflow-y: auto;
+    }
+  }
+
+  .flipcard-single {
+    .flipcard-item-back[aria-hidden="true"] {
+      display: none;
     }
   }
 }
